Fixing alignment

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -105,6 +105,7 @@ footer p{
     font-size: 22px;
     line-height: 60px;
     color:var(--app-white);
+    font-family: 'Roboto', sans-serif;
 }
 
 #about-us {
@@ -112,7 +113,7 @@ footer p{
     padding: 50px 0;
 }
   
-.container {
+.container-about {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
@@ -129,6 +130,7 @@ p {
     line-height: 1.5;
     margin-bottom: 20px;
     color: var(--app-white);
+    font-family: 'Roboto', sans-serif;
 }
 
 #pricing {
@@ -155,6 +157,7 @@ p {
     font-size: 25px;
     margin-top: 0;
     color:var(--app-white); 
+    font-family: 'Roboto', sans-serif;
 }
   
 .price {
@@ -167,7 +170,8 @@ ul {
     padding: 0;
     margin-bottom: 40px;
     color:var(--app-white); 
-    font-size: 18px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 }
   
 li {
